objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Arriving_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Arriving To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>notEqual</operation>
                <valueField>Airport__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Flights (Arriving To)</relationshipLabel>
        <relationshipName>Flights1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depart_Time__c</fullName>
        <label>Depart Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>TEXT(HOUR(TIMEVALUE(FROMUNIXTIME(UNIXTIMESTAMP(Arrival_Time__c) - UNIXTIMESTAMP(Depart_Time__c))))) &amp; &apos;h &apos; &amp; TEXT(MINUTE(TIMEVALUE(FROMUNIXTIME(UNIXTIMESTAMP(Arrival_Time__c) - UNIXTIMESTAMP(Depart_Time__c))))) &amp; &apos;m&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Status__c</fullName>
        <label>Flight Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Type__c</fullName>
        <label>FlightType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>One-Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Onboarding From</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_time__c</fullName>
        <label>Onboarding time</label>
        <type>DateTime</type>
    </fields>
    <label>Flight</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Onboarding_From__c</columns>
        <columns>Arriving_To__c</columns>
        <columns>Depart_Time__c</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Flight_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{00000}</displayFormat>
        <label>Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>